<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <item
        android:id="@+id/events"
        android:icon="@drawable/earth"


        android:title='@string/menu_events_title'
        app:showAsAction="withText" />

    <item
        android:id="@+id/launches"
        android:icon="@drawable/launch_2"

        android:title="@string/menu_launches_title"/>

    <item
        android:id="@+id/spacecrafts"

        android:icon="@drawable/sc"
        android:title="@string/menu_spacecrafts_title"
        app:showAsAction="withText" />

    <item
        android:id="@+id/favorites"
        android:icon="@drawable/favorites"

        android:title="@string/menu_favorites_title"
        app:showAsAction="withText" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/telescope"

        android:title="@string/menu_settings_title"
        app:showAsAction="withText" />


</menu>