<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/indigo_900"  >


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/settings_title"
        android:textColor="@color/light_grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <!--adding a radio button -->
        <RadioButton
            android:id="@+id/human_rated_1"
            android:layout_width="328dp"
            android:layout_height="50dp"
            android:checked="false"
            android:padding="4dp"
            android:text="@string/Radio_button_1"
            android:textAlignment="viewStart"
            android:textColor="@color/light_grey"
            android:textSize="14sp" />

        <!--adding a radio button -->
        <RadioButton
            android:id="@+id/human_rated_2"
            android:layout_width="328dp"
            android:layout_height="50dp"
            android:checked="false"
            android:padding="4dp"
            android:text="@string/Radio_button_2"
            android:textAlignment="viewStart"
            android:textColor="@color/light_grey"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/human_rated_3"
            android:layout_width="328dp"
            android:layout_height="50dp"
            android:checked="false"
            android:padding="4dp"
            android:text="@string/Radio_button_3"
            android:textAlignment="viewStart"
            android:textColor="@color/light_grey"
            android:textSize="14sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="300dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <!--adding a radio button -->
        <RadioButton
            android:id="@+id/in_use_1"
            android:layout_width="328dp"
            android:layout_height="50dp"
            android:checked="false"
            android:padding="4dp"
            android:text="@string/Radio_button_4"
            android:textAlignment="viewStart"
            android:textColor="@color/light_grey"
            android:textSize="14sp" />

        <!--adding a radio button -->
        <RadioButton
            android:id="@+id/in_use_2"
            android:layout_width="328dp"
            android:layout_height="50dp"
            android:checked="false"
            android:padding="4dp"
            android:text="@string/Radio_button_5"
            android:textAlignment="viewStart"
            android:textColor="@color/light_grey"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/in_use_3"
            android:layout_width="328dp"
            android:layout_height="50dp"
            android:checked="false"
            android:padding="4dp"
            android:text="@string/Radio_button_6"
            android:textAlignment="viewStart"
            android:textColor="@color/light_grey"
            android:textSize="14sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>